--- a/src/app/emp-details/emp-details.component.scss
+++ b/src/app/emp-details/emp-details.component.scss
@@ -29,3 +29,9 @@ input{
     height: 45px;
     margin-left: 20px;
 }
+li{
+    list-style: none;
+   
+    height: 50px;
+    background-color: aliceblue;
+}
